reflectapi-demo/tests/errors/invalid_reflect_field_type_function_generic.rs
#[derive(reflectapi::Input)]
struct MyStruct {
    field: dyn Fn(&str) -> i32,
}

fn main() {}
